<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rib_dialog_example"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dialogs_example_debug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/show_themed_dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="3826750182" />

    <Button
        android:id="@+id/show_simple_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_simple_dialog"
        app:layout_constraintBottom_toTopOf="@id/show_lazy_dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/show_themed_dialog" />

    <Button
        android:id="@+id/show_themed_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_themed_dialog"
        app:layout_constraintBottom_toTopOf="@id/show_simple_dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialogs_example_debug" />

    <Button
        android:id="@+id/show_lazy_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_lazy_dialog"
        app:layout_constraintBottom_toTopOf="@id/show_rib_dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/show_simple_dialog" />

    <Button
        android:id="@+id/show_rib_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_rib_dialog"
        app:layout_constraintBottom_toTopOf="@id/up_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/show_lazy_dialog" />

    <Button
        android:id="@+id/up_navigation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/up_navigation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/show_rib_dialog" />

</androidx.constraintlayout.widget.ConstraintLayout>
